RESOLVED FIXED 247573
[iOS] Screen Wake Lock API doesn't work
https://bugs.webkit.org/show_bug.cgi?id=247573
Summary [iOS] Screen Wake Lock API doesn't work
Chris Dumez
Reported 2022-11-07 09:16:33 PST
Screen Wake Lock API doesn't work works on macOS but not iOS.
Attachments
Chris Dumez
Comment 1 2022-11-07 09:16:41 PST
Chris Dumez
Comment 2 2022-11-07 09:22:16 PST
EWS
Comment 3 2022-11-07 14:06:03 PST
Committed 256426@main (c895bf811b89): <https://commits.webkit.org/256426@main> Reviewed commits have been landed. Closing PR #6209 and removing active labels.
siim
Comment 4 2023-03-27 13:48:01 PDT
Works in Safari 16.4. But does not work when web page (PWA) is added to the home screen.
Chris Dumez
Comment 5 2023-03-27 13:49:09 PDT
(In reply to siim from comment #4) > Works in Safari 16.4. > But does not work when web page (PWA) is added to the home screen. Would you mind filing a bug? ideally with a repro case.
Note You need to log in before you can comment on or make changes to this bug.