[iOS] Screen Wake Lock API doesn't work https://bugs.webkit.org/show_bug.cgi?id=247573 rdar://101561575

Reviewed by Jer Noble.

`IOPMAssertionCreateWithDescription(kIOPMAssertionTypePreventUserIdleDisplaySleep)`
only works on macOS to prevent display from sleeping. On iOS, we now rely on the
`UIApplication.sharedApplication.idleTimerDisabled` API instead:
- https://developer.apple.com/documentation/uikit/uiapplication/1623070-idletimerdisabled?language=objc

* Source/WebCore/PAL/PAL.xcodeproj/project.pbxproj:
* Source/WebCore/PAL/pal/system/cocoa/SleepDisablerCocoa.cpp:
(PAL::SleepDisablerCocoa::SleepDisablerCocoa):
(PAL::SleepDisablerCocoa::~SleepDisablerCocoa):
(PAL::SleepDisablerCocoa::takeScreenSleepDisablingAssertion):
(PAL::SleepDisablerCocoa::takeSystemSleepDisablingAssertion):
* Source/WebCore/PAL/pal/system/cocoa/SleepDisablerCocoa.h:
* Source/WebCore/PAL/pal/system/ios/SleepDisablerIOS.mm: Added.
(PAL::ScreenSleepDisabler::shared):
(PAL::ScreenSleepDisabler::takeAssertion):
(PAL::ScreenSleepDisabler::ScreenSleepDisabler):
(PAL::ScreenSleepDisabler::updateState):
(PAL::SleepDisablerCocoa::takeScreenSleepDisablingAssertion):

Canonical link: https://commits.webkit.org/256426@main